@@ -31,6 +31,7 @@ Improvements in Version 1.4 include:
 
 * scan_pdf now does a better job extracting emails from text.
 
+
 New features for testing includes:
 
 * tests/regress.py now performs better validation of reports with the
@@ -77,6 +78,9 @@ Much of the emphasis of the 1.4 is to decrease "false positives."
 
 * scan_net now properly reports ethernet addresses and TCP connections
   into the files ether.txt and tcp.txt.
+
+  TCP memory structure scanning is now disabled by default; it can be
+  explicitly enabled with -Scarve_tcp=true.
 
 * scan_elf applies more validation to ELF headers and, as a result,
   many of the false positives have been eliminated. This was
