@@ -1,3 +1,7 @@
+2013-07-26  Simson Garfinkel  <simsong@Mucha.local>
+
+	* src/scan_net.cpp (scan_net): the -S variable carve_tcp is now implemented by the scan_net scanner to enable or disable TCP/IP memory structure carving. It is disabled by default.
+
 2013-07-17  Basic  <simsong@sg1.ncr.nps.edu>
 
 	* src/scan_windirs.cpp (scan_windirs): windirs now only runs at top level
